--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "yodl-4.02.01.tar.bz2": 6fceca4b1fbadf94956d48b12f2524dc59e1e4f2
+  yodl-4.02.02.tar.bz2: a036b365933387ffc9db855cbba72e605a44058c
